// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`@livy/dom-handler > interaction with "loading" document.readyState > should asynchronously write logs to a selector (with DOM not initially ready) 1`] = `
"
    <div role=\\"listitem\\" style=\\"font-family: -apple-system, BlinkMacSystemFont, &quot;Segoe UI&quot;, Roboto, Helvetica, Arial, sans-serif, &quot;Apple Color Emoji&quot;, &quot;Segoe UI Emoji&quot;, &quot;Segoe UI Symbol&quot;; color: #363844; background: #fafbfd; padding: 0.75em 1em; border-radius: 0.125em; box-shadow: 0 0 0 1px #9195a233, 0 2px #9195a244; margin-bottom: 0.75em\\">
      <time datetime=\\"2015-08-15T14:30:00+02:00\\" style=\\"font-family: SFMono-Regular, Consolas, &quot;Liberation Mono&quot;, Menlo, Courier, monospace; color: #9195a2; display: block; font-size: 0.8em; margin-bottom: 0.75em\\">2015-08-15 14:30:00</time>

      <span style=\\"position: relative\\">
        <span>Test DomHandler</span>
        <span aria-hidden=\\"true\\" style=\\"position: absolute; left: 0; right: 0; bottom: -1px; height: 8px; background: #9195a211\\"></span>
      </span>

      

      
      
      

      

      <div role=\\"list\\" style=\\"font-family: SFMono-Regular, Consolas, &quot;Liberation Mono&quot;, Menlo, Courier, monospace; color: #9195a2; display: block; font-size: 0.8em; margin-top: 1.25em\\">
        <span role=\\"listitem\\">
          <span role=\\"label\\" style=\\"display: inline-block; font-weight: inherit\\">channel:</span>
          <span style=\\"display: inline-block\\">logs</span></span>
          <span role=\\"separator\\" style=\\"color: #9195a255\\"> | </span>
          <span role=\\"listitem\\">
          <span style=\\"display: inline-block; font-weight: inherit\\">level:</span>
          <span style=\\"display: inline-block\\">debug</span>
        </span>
      </div>
    </div>"
`;

exports[`@livy/dom-handler > should respect the "level" option 1`] = `
"
    <div role=\\"listitem\\" style=\\"font-family: -apple-system, BlinkMacSystemFont, &quot;Segoe UI&quot;, Roboto, Helvetica, Arial, sans-serif, &quot;Apple Color Emoji&quot;, &quot;Segoe UI Emoji&quot;, &quot;Segoe UI Symbol&quot;; color: #363844; background: #fafbfd; padding: 0.75em 1em; border-radius: 0.125em; box-shadow: 0 0 0 1px #9195a233, 0 2px #08a1ed; margin-bottom: 0.75em\\">
      <time datetime=\\"2015-08-15T14:30:00+02:00\\" style=\\"font-family: SFMono-Regular, Consolas, &quot;Liberation Mono&quot;, Menlo, Courier, monospace; color: #9195a2; display: block; font-size: 0.8em; margin-bottom: 0.75em\\">2015-08-15 14:30:00</time>

      <span style=\\"position: relative\\">
        <span></span>
        <span aria-hidden=\\"true\\" style=\\"position: absolute; left: 0; right: 0; bottom: -1px; height: 8px; background: #08a1ed11\\"></span>
      </span>

      

      
      
      

      

      <div role=\\"list\\" style=\\"font-family: SFMono-Regular, Consolas, &quot;Liberation Mono&quot;, Menlo, Courier, monospace; color: #9195a2; display: block; font-size: 0.8em; margin-top: 1.25em\\">
        <span role=\\"listitem\\">
          <span role=\\"label\\" style=\\"display: inline-block; font-weight: inherit\\">channel:</span>
          <span style=\\"display: inline-block\\">logs</span></span>
          <span role=\\"separator\\" style=\\"color: #9195a255\\"> | </span>
          <span role=\\"listitem\\">
          <span style=\\"display: inline-block; font-weight: inherit\\">level:</span>
          <span style=\\"display: inline-block\\">notice</span>
        </span>
      </div>
    </div>"
`;

exports[`@livy/dom-handler > should respect the "reversed" option 1`] = `
"
    <div role=\\"listitem\\" style=\\"font-family: -apple-system, BlinkMacSystemFont, &quot;Segoe UI&quot;, Roboto, Helvetica, Arial, sans-serif, &quot;Apple Color Emoji&quot;, &quot;Segoe UI Emoji&quot;, &quot;Segoe UI Symbol&quot;; color: #363844; background: #fafbfd; padding: 0.75em 1em; border-radius: 0.125em; box-shadow: 0 0 0 1px #9195a233, 0 2px #08a1edaa; margin-bottom: 0.75em\\">
      <time datetime=\\"2015-08-15T14:30:00+02:00\\" style=\\"font-family: SFMono-Regular, Consolas, &quot;Liberation Mono&quot;, Menlo, Courier, monospace; color: #9195a2; display: block; font-size: 0.8em; margin-bottom: 0.75em\\">2015-08-15 14:30:00</time>

      <span style=\\"position: relative\\">
        <span>Test DomHandler</span>
        <span aria-hidden=\\"true\\" style=\\"position: absolute; left: 0; right: 0; bottom: -1px; height: 8px; background: #08a1ed11\\"></span>
      </span>

      

      
      
      

      

      <div role=\\"list\\" style=\\"font-family: SFMono-Regular, Consolas, &quot;Liberation Mono&quot;, Menlo, Courier, monospace; color: #9195a2; display: block; font-size: 0.8em; margin-top: 1.25em\\">
        <span role=\\"listitem\\">
          <span role=\\"label\\" style=\\"display: inline-block; font-weight: inherit\\">channel:</span>
          <span style=\\"display: inline-block\\">logs</span></span>
          <span role=\\"separator\\" style=\\"color: #9195a255\\"> | </span>
          <span role=\\"listitem\\">
          <span style=\\"display: inline-block; font-weight: inherit\\">level:</span>
          <span style=\\"display: inline-block\\">info</span>
        </span>
      </div>
    </div>
    <div role=\\"listitem\\" style=\\"font-family: -apple-system, BlinkMacSystemFont, &quot;Segoe UI&quot;, Roboto, Helvetica, Arial, sans-serif, &quot;Apple Color Emoji&quot;, &quot;Segoe UI Emoji&quot;, &quot;Segoe UI Symbol&quot;; color: #363844; background: #fafbfd; padding: 0.75em 1em; border-radius: 0.125em; box-shadow: 0 0 0 1px #9195a233, 0 2px #9195a244; margin-bottom: 0.75em\\">
      <time datetime=\\"2015-08-15T14:30:00+02:00\\" style=\\"font-family: SFMono-Regular, Consolas, &quot;Liberation Mono&quot;, Menlo, Courier, monospace; color: #9195a2; display: block; font-size: 0.8em; margin-bottom: 0.75em\\">2015-08-15 14:30:00</time>

      <span style=\\"position: relative\\">
        <span>Test DomHandler</span>
        <span aria-hidden=\\"true\\" style=\\"position: absolute; left: 0; right: 0; bottom: -1px; height: 8px; background: #9195a211\\"></span>
      </span>

      

      
      
      

      

      <div role=\\"list\\" style=\\"font-family: SFMono-Regular, Consolas, &quot;Liberation Mono&quot;, Menlo, Courier, monospace; color: #9195a2; display: block; font-size: 0.8em; margin-top: 1.25em\\">
        <span role=\\"listitem\\">
          <span role=\\"label\\" style=\\"display: inline-block; font-weight: inherit\\">channel:</span>
          <span style=\\"display: inline-block\\">logs</span></span>
          <span role=\\"separator\\" style=\\"color: #9195a255\\"> | </span>
          <span role=\\"listitem\\">
          <span style=\\"display: inline-block; font-weight: inherit\\">level:</span>
          <span style=\\"display: inline-block\\">debug</span>
        </span>
      </div>
    </div>"
`;

exports[`@livy/dom-handler > should write logs to a selector (with DOM ready) 1`] = `
"
    <div role=\\"listitem\\" style=\\"font-family: -apple-system, BlinkMacSystemFont, &quot;Segoe UI&quot;, Roboto, Helvetica, Arial, sans-serif, &quot;Apple Color Emoji&quot;, &quot;Segoe UI Emoji&quot;, &quot;Segoe UI Symbol&quot;; color: #363844; background: #fafbfd; padding: 0.75em 1em; border-radius: 0.125em; box-shadow: 0 0 0 1px #9195a233, 0 2px #9195a244; margin-bottom: 0.75em\\">
      <time datetime=\\"2015-08-15T14:30:00+02:00\\" style=\\"font-family: SFMono-Regular, Consolas, &quot;Liberation Mono&quot;, Menlo, Courier, monospace; color: #9195a2; display: block; font-size: 0.8em; margin-bottom: 0.75em\\">2015-08-15 14:30:00</time>

      <span style=\\"position: relative\\">
        <span>Test DomHandler</span>
        <span aria-hidden=\\"true\\" style=\\"position: absolute; left: 0; right: 0; bottom: -1px; height: 8px; background: #9195a211\\"></span>
      </span>

      

      
      
      

      

      <div role=\\"list\\" style=\\"font-family: SFMono-Regular, Consolas, &quot;Liberation Mono&quot;, Menlo, Courier, monospace; color: #9195a2; display: block; font-size: 0.8em; margin-top: 1.25em\\">
        <span role=\\"listitem\\">
          <span role=\\"label\\" style=\\"display: inline-block; font-weight: inherit\\">channel:</span>
          <span style=\\"display: inline-block\\">logs</span></span>
          <span role=\\"separator\\" style=\\"color: #9195a255\\"> | </span>
          <span role=\\"listitem\\">
          <span style=\\"display: inline-block; font-weight: inherit\\">level:</span>
          <span style=\\"display: inline-block\\">debug</span>
        </span>
      </div>
    </div>"
`;

exports[`@livy/dom-handler > should write logs to the referenced element 1`] = `
"
    <div role=\\"listitem\\" style=\\"font-family: -apple-system, BlinkMacSystemFont, &quot;Segoe UI&quot;, Roboto, Helvetica, Arial, sans-serif, &quot;Apple Color Emoji&quot;, &quot;Segoe UI Emoji&quot;, &quot;Segoe UI Symbol&quot;; color: #363844; background: #fafbfd; padding: 0.75em 1em; border-radius: 0.125em; box-shadow: 0 0 0 1px #9195a233, 0 2px #9195a244; margin-bottom: 0.75em\\">
      <time datetime=\\"2015-08-15T14:30:00+02:00\\" style=\\"font-family: SFMono-Regular, Consolas, &quot;Liberation Mono&quot;, Menlo, Courier, monospace; color: #9195a2; display: block; font-size: 0.8em; margin-bottom: 0.75em\\">2015-08-15 14:30:00</time>

      <span style=\\"position: relative\\">
        <span>Test DomHandler</span>
        <span aria-hidden=\\"true\\" style=\\"position: absolute; left: 0; right: 0; bottom: -1px; height: 8px; background: #9195a211\\"></span>
      </span>

      

      
      
      

      

      <div role=\\"list\\" style=\\"font-family: SFMono-Regular, Consolas, &quot;Liberation Mono&quot;, Menlo, Courier, monospace; color: #9195a2; display: block; font-size: 0.8em; margin-top: 1.25em\\">
        <span role=\\"listitem\\">
          <span role=\\"label\\" style=\\"display: inline-block; font-weight: inherit\\">channel:</span>
          <span style=\\"display: inline-block\\">logs</span></span>
          <span role=\\"separator\\" style=\\"color: #9195a255\\"> | </span>
          <span role=\\"listitem\\">
          <span style=\\"display: inline-block; font-weight: inherit\\">level:</span>
          <span style=\\"display: inline-block\\">debug</span>
        </span>
      </div>
    </div>
    <div role=\\"listitem\\" style=\\"font-family: -apple-system, BlinkMacSystemFont, &quot;Segoe UI&quot;, Roboto, Helvetica, Arial, sans-serif, &quot;Apple Color Emoji&quot;, &quot;Segoe UI Emoji&quot;, &quot;Segoe UI Symbol&quot;; color: #363844; background: #fafbfd; padding: 0.75em 1em; border-radius: 0.125em; box-shadow: 0 0 0 1px #9195a233, 0 2px #08a1edaa; margin-bottom: 0.75em\\">
      <time datetime=\\"2015-08-15T14:30:00+02:00\\" style=\\"font-family: SFMono-Regular, Consolas, &quot;Liberation Mono&quot;, Menlo, Courier, monospace; color: #9195a2; display: block; font-size: 0.8em; margin-bottom: 0.75em\\">2015-08-15 14:30:00</time>

      <span style=\\"position: relative\\">
        <span>Test DomHandler</span>
        <span aria-hidden=\\"true\\" style=\\"position: absolute; left: 0; right: 0; bottom: -1px; height: 8px; background: #08a1ed11\\"></span>
      </span>

      

      
      
      

      

      <div role=\\"list\\" style=\\"font-family: SFMono-Regular, Consolas, &quot;Liberation Mono&quot;, Menlo, Courier, monospace; color: #9195a2; display: block; font-size: 0.8em; margin-top: 1.25em\\">
        <span role=\\"listitem\\">
          <span role=\\"label\\" style=\\"display: inline-block; font-weight: inherit\\">channel:</span>
          <span style=\\"display: inline-block\\">logs</span></span>
          <span role=\\"separator\\" style=\\"color: #9195a255\\"> | </span>
          <span role=\\"listitem\\">
          <span style=\\"display: inline-block; font-weight: inherit\\">level:</span>
          <span style=\\"display: inline-block\\">info</span>
        </span>
      </div>
    </div>"
`;
